<resources>
    <string name="app_name">Decafit Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_your_fitness">Track \nyour fitness</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="create_a_nfitness_nutrition_plan">Create a\nfitness/nutrition plan</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="wrong_email_address">wrong email address</string>
    <string name="good_morning">Good Morning</string>
    <string name="today_s_session">Today’s session</string>
    <string name="your_daily_tracker">Your daily tracker 🏋🏽‍♀️</string>
    <string name="another_focus_area">Another Focus Area</string>
    <string name="back">Back</string>
    <string name="_20_days">20 days</string>
    <string name="full_body">Full Body</string>
    <string name="timer_value">00:20</string>
    <string name="complete_workout">complete</string>
    <string name="incomplete_workout"><font color="#F26430">Incomplete</font></string>
    <string name="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed.</string>
    <string name="start_workout">Start Workout</string>
    <string name="continue_workout">Continue Workout</string>
    <string name="workout_image">workout image</string>
    <string name="back_arrow">back arrow</string>
    <string name="workouts_points">10 Workouts</string>
    <string name="kcal_points">240 Kcal</string>
    <string name="workout_time_min">24 min</string>
    <string name="workout_counter">00:04</string>
    <string name="next_workout">Next Workout</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="jumping_jacks"> </string>
    <string name="steps_taken">Steps taken</string>
    <string name="numbersOf_steps">%1$s Steps</string>
    <string name="set_your_limit">Set your limit</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="victor_bamikole">Victor Bamikole</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_profile">View Profile</string>
    <string name="gift_chuks">Gift Chuks</string>
    <string name="_24_min">24 min</string>
    <string name="_24_kcal">24 Kcal</string>
    <string name="number_or_reps">Number or reps</string>
    <string name="enter_the_number_of_reps_and_sets_for_your_workout">Enter the number of reps and sets for your workout</string>
    <string name="numberOfExercises">%1$d Exercises</string>
    <string name="no_exercise">No Exercise</string>
    <string name="count">count</string>
    <string name="end">END</string>
    <string name="no_sensor_detected">No Sensor Detected On this Devices</string>
    <string name="repeat_workout">Repeat</string>
    <string name="pending_exercise">You are yet to complete this workout.</string>
</resources>