<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".workout.presentation.screens.WorkoutBreakdownFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/exercise_image"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:background="@drawable/workout_breakdown_image_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/workout_image" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/back_arrow_CV"
            android:layout_width="@dimen/margin_40dp"
            android:layout_height="@dimen/margin_40dp"
            app:cardCornerRadius="@dimen/margin_12dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:background="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/workoutBreakdown_IV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/back_arrow" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/workoutBreakdown_tv"
            style="@style/NormalBoldText"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginBottom="9dp"
            android:text="@string/numberOfExercises"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24sp"
            app:layout_constraintBottom_toTopOf="@+id/workoutBreakdown_timer_tv"
            app:layout_constraintStart_toStartOf="@+id/exercise_image" />

        <TextView
            android:id="@+id/workout_cal_tv"
            style="@style/NormalBoldText"
            android:layout_marginStart="8dp"
            android:drawablePadding="8dp"
            android:text="@string/kcal_points"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_fire_icon"
            app:layout_constraintStart_toEndOf="@+id/workoutBreakdown_timer_tv"
            app:layout_constraintTop_toTopOf="@+id/workoutBreakdown_timer_tv"
             />

        <TextView
            android:id="@+id/workoutBreakdown_timer_tv"
            style="@style/NormalBoldText"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:drawablePadding="8dp"
            android:text="@string/workout_time_min"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:drawableStartCompat="@drawable/ic_clock_icon"
            app:layout_constraintBottom_toBottomOf="@+id/exercise_image"
            app:layout_constraintStart_toStartOf="@+id/workoutBreakdown_tv"
             />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercise_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/workout_RV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/workout_breakdown_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_workout_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginBottom="79dp"
            android:backgroundTint="@color/primary_color"
            android:paddingVertical="10dp"
            android:text="@string/start_workout"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/continue_workout_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginBottom="79dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingVertical="10dp"
            android:visibility="gone"
            android:text="@string/continue_workout"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>