<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workout.presentation.screens.PauseResumeWorkoutFragment">
    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pauseAndResumeImageIV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#F0F2F6"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/back_arrow_CV"-->
<!--                android:layout_width="@dimen/margin_40dp"-->
<!--                android:layout_height="@dimen/margin_40dp"-->
<!--                app:cardCornerRadius="@dimen/margin_12dp"-->
<!--                android:layout_marginStart="@dimen/margin_32dp"-->
<!--                android:layout_marginTop="@dimen/margin_40dp"-->
<!--                android:background="@drawable/ic_back_arrow"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent">-->

<!--            <ImageView-->
<!--                android:id="@+id/pauseWorkoutBackArrow_IV"-->
<!--                android:layout_width="25dp"-->
<!--                android:layout_height="25dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:contentDescription="@string/back_arrow"-->
<!--                android:src="@drawable/ic_arrow_back_"-->
<!--               />-->

<!--            </com.google.android.material.card.MaterialCardView>-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/back_arrow_CV"
                android:layout_width="@dimen/margin_40dp"
                android:layout_height="@dimen/margin_40dp"
                app:cardCornerRadius="@dimen/margin_12dp"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_40dp"
                android:background="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pauseWorkoutBackArrow_IV"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_arrow_back_"
               />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/workout_header_tv"
                style="@style/NormalBoldText"
                android:layout_marginTop="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/jumping_jacks"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pauseAndResumeImageIV" />


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/workoutProgressIndicator"
                style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                android:layout_width="@dimen/margin_136dp"
                android:layout_height="@dimen/margin_136dp"
                android:layout_marginTop="72dp"
                android:max="60"
                android:progress="40"
                android:visibility="invisible"
                app:indicatorSize="@dimen/margin_136dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workout_header_tv"
                app:trackColor="#F0F2F6"
                app:trackThickness="6dp" />

            <TextView
                android:id="@+id/workout_counter_tv"
                style="@style/NormalBoldText"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/workout_counter"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/workoutProgressIndicator"
                app:layout_constraintEnd_toEndOf="@+id/workoutProgressIndicator"
                app:layout_constraintStart_toStartOf="@+id/workoutProgressIndicator"
                app:layout_constraintTop_toTopOf="@+id/workoutProgressIndicator" />

            <TextView
                android:id="@+id/resume_btn"
                style="@style/NormalBoldText"
                android:layout_marginTop="@dimen/margin_56dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/resume"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="normal"
                android:visibility="visible"
                app:drawableStartCompat="@drawable/ic_play_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workoutProgressIndicator" />

            <TextView
                android:id="@+id/pause_btn"
                style="@style/NormalBoldText"
                android:layout_marginTop="@dimen/margin_56dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/pause"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:drawableStartCompat="@drawable/ic_pause_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workoutProgressIndicator" />

            <Button
                android:id="@+id/next_workout_btn"
                style="@style/ButtonStyle"
                android:layout_marginHorizontal="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/next_workout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resume_btn" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.38" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/steps_counter_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workout_header_tv">

                <TextView
                    android:id="@+id/steps_taken_tv"
                    style="@style/FaintText"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/steps_taken"
                    android:layout_marginTop="@dimen/margin_48dp"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/numbersOf_steps_tv"
                    style="@style/NormalText"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="0 Steps"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/steps_taken_tv" />

                <TextView
                    android:id="@+id/time_remaining_Tv"
                    style="@style/FaintText"
                    android:layout_marginTop="9dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Time remaining"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/numbersOf_steps_tv"
                    app:layout_goneMarginTop="@dimen/margin_32dp" />

                <TextView
                    android:id="@+id/remaining_time_tv"
                    style="@style/NormalText"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="00:00"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_remaining_Tv" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>